--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -16,13 +16,13 @@ concurrency:
 
 jobs:
   # JOB ۱: ساخت "بسته دیپلوی کامل"
+  # این Job یک وظیفه دارد: تمام فایل‌های پروژه و داده را در یک بسته قابل اعتماد جمع‌آوری کند.
   build_package:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          # توکن را اینجا هم نیاز داریم تا در مرحله بعد کامیت کنیم
           token: ${{ secrets.GH_PAT }}
       
       - name: Set up Python
@@ -38,17 +38,15 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
 
-      # ✅ اصلاح کلیدی ۱: ابتدا فایل‌های جدید را به مخزن پوش می‌کنیم
-      # این کار برای داشتن تاریخچه و نسخه پشتیبان در خود گیت انجام می‌شود
+      # ✅ گام ۱: ابتدا فایل‌های جدید را به مخزن پوش می‌کنیم تا یک نسخه پشتیبان داشته باشیم.
       - name: Commit and Push Data Files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "📊 DATA: Update configs"
           file_pattern: "*.json *.yml *.txt"
 
-      # ✅ اصلاح کلیدی ۲: حالا یک آرتیفکت کامل و قابل اعتماد می‌سازیم
-      # این آرتیفکت شامل تمام فایل‌های سایت (index.html و ...) و همچنین
-      # تمام فایل‌های داده جدید (.json, .yml) است. این بسته کامل ما برای دیپلوی است.
+      # ✅ گام ۲: حالا یک آرتیفکت کامل و قابل اعتماد می‌سازیم.
+      # این بسته شامل همه چیز است: index.html, index.js, logo.png, و فایل‌های داده جدید.
       - name: Create Complete Deployment Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -57,11 +55,11 @@ jobs:
           retention-days: 1
 
   # JOB ۲: دیپلوی بسته کامل روی تمام پلتفرم‌ها
+  # این Job تنها زمانی اجرا می‌شود که Job اول با موفقیت یک بسته کامل ساخته باشد.
   deploy_all:
     needs: build_package
     runs-on: ubuntu-latest
     
-    # ✅ اصلاح کلیدی ۳: این Job حالا شامل تمام مراحل دیپلوی است
     steps:
       - name: Download Complete Deployment Artifact
         uses: actions/download-artifact@v4
@@ -76,7 +74,7 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          # حالا که تمام فایل‌ها از آرتیفکت آمده‌اند، ورسل به درستی دیپلوی می‌کند
+          # حالا که تمام فایل‌ها از آرتیفکت آمده‌اند، ورسل به درستی دیپلوی می‌کند.
           working-directory: .
           vercel-args: '--prod'
 
@@ -92,7 +90,6 @@ jobs:
           aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete --cache-control max-age=300
 
       # --- مرحله دیپلوی روی GitHub Pages ---
-      # برای دیپلوی روی گیت‌هاب پیجز، باید آرتیفکت را با نام خاص خودش دوباره بسازیم
       - name: Prepare Artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
