--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -15,8 +15,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # JOB ۱: ساخت "بسته دیپلوی کامل"
-  build_package:
+  # JOB ۱: ساخت داده‌ها و به‌روزرسانی "منبع حقیقت"
+  # این Job داده‌ها را می‌سازد و مستقیماً به ریپازیتوری push می‌کند.
+  build_and_commit:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -37,31 +38,21 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
 
-      - name: Commit and Push Data Files
+      - name: Commit and Push Data Files to Repository
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "📊 DATA: Update configs"
           file_pattern: "*.json *.yml *.txt"
 
-      - name: Create Complete Deployment Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployment-package
-          path: .
-          retention-days: 1
-
-  # JOB ۲: دیپلوی بسته کامل روی تمام پلتفرم‌ها
-  deploy_all:
-    needs: build_package
+  # JOB ۲: دیپلوی Vercel (با دسترسی کامل به Git)
+  # این Job منتظر Job اول می‌ماند و سپس یک checkout کامل و جدید انجام می‌دهد.
+  deploy_vercel:
+    needs: build_and_commit
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Download Complete Deployment Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: deployment-package
-          path: .
-
+      - name: Checkout Repository with LATEST data
+        uses: actions/checkout@v4
+        
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
@@ -70,6 +61,20 @@ jobs:
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: .
           vercel-args: '--prod'
+
+  # JOB ۳: دیپلوی GitHub Pages و ArvanCloud (بر اساس آرتیفکت)
+  # این Job هم منتظر Job اول می‌ماند و سپس یک آرتیفکت کامل و به‌روز می‌سازد.
+  deploy_others:
+    needs: build_and_commit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository with LATEST data
+        uses: actions/checkout@v4
+
+      - name: Create Complete Artifact for Deployment
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
 
       - name: Deploy to ArvanCloud S3
         env:
@@ -81,12 +86,8 @@ jobs:
         run: |
           aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete --cache-control max-age=300
 
-      - name: Prepare Artifact for GitHub Pages
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: '.'
-      
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
 
 
