--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,22 +2,17 @@
 name: Deploy Cloudflare Worker
 
 on:
-  # Allows manual execution from the GitHub Actions tab
   workflow_dispatch:
-  
-  # Triggers the workflow on push events to the main branch
   push:
     branches:
       - main
     paths:
-      # Ensures the workflow only runs if specified files have changed
       - 'worker.js'
       - 'wrangler.toml'
       - 'index.js'
       - 'scraper.py'
       - 'requirements.txt'
 
-# Prevents multiple instances of this workflow from running simultaneously
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -26,8 +21,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     name: Deploy Worker to Cloudflare
-    
-    # Restricts the workflow's permissions to read-only for security
     permissions:
       contents: read
       
@@ -47,11 +40,13 @@ jobs:
       
       - name: Run Scraper to Generate Data
         run: python scraper.py
-        # If your scraper.py needs specific environment variables (e.g., secrets), 
-        # uncomment and list them here, referencing your GitHub secrets.
-        # Example:
-        # env:
-        #   YOUR_API_KEY: ${{ secrets.YOUR_API_KEY }}
+        env:
+          # --- Environment variables for scraper.py from GitHub Secrets ---
+          GH_PAT: ${{ secrets.GH_PAT }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_KV_NAMESPACE_ID: ${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }} # This secret must be added to GitHub
+          # --- End of environment variables ---
 
       - name: Deploy Worker to Cloudflare
         uses: cloudflare/wrangler-action@v3
