--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,12 @@
+# .github/workflows/deploy-cloudflare-worker.yml
 name: deploy cloudflare worker
 
 on:
-  workflow_dispatch: # Manual trigger
+  workflow_dispatch: # manual trigger
   push:
     branches:
       - main
-    paths: # Only trigger if worker-related files change
+    paths: # only trigger if worker-related files change
       - 'worker.js'
       - 'wrangler.toml'
 
@@ -19,21 +20,26 @@ jobs:
     name: deploy worker to cloudflare
     permissions:
       contents: read
-      # id-token: write # Required for OIDC, but wrangler-action supports direct API token
+      # id-token: write # required for oidc, but wrangler-action supports direct api token
       
     steps:
       - name: checkout repository
-        uses: actions/checkout@v4 # Updated to v4 for latest features
+        uses: actions/checkout@v4 # updated to v4 for latest features
 
       - name: deploy worker to cloudflare
-        # Using the latest major version (v3) of wrangler-action
-        # Ensure that CLOUDFLARE_API_TOKEN, CLOUDFLARE_ACCOUNT_ID, CLOUDFLARE_KV_NAMESPACE_ID
-        # are correctly configured in your Cloudflare project associated with wrangler.toml.
-        # Wrangler will automatically use account_id from wrangler.toml if available.
+        # using the latest major version (v3) of wrangler-action
+        # ensure that CLOUDFLARE_API_TOKEN, CLOUDFLARE_ACCOUNT_ID
+        # are correctly configured in your GitHub repository secrets.
+        # The KV namespace binding is configured in wrangler.toml,
+        # and its ID is passed via CLOUDFLARE_KV_NAMESPACE_ID in the scraper job.
+        # Wrangler will automatically use account_id from wrangler.toml if available,
+        # but explicit `accountid` in action ensures it.
         uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }} # Use exact secret names
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }} # Use exact secret names
-          # Add extra environment variables for the worker script itself if needed
-          # But for KV bindings, wrangler.toml is the preferred method
-          # command: 'deploy --minify --environment production' # Example for specific deployment
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }} # use exact secret names
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }} # use exact secret names
+          # kv_namespace_id is not directly needed by wrangler-action itself for deployment
+          # unless you want to pass it as an environment variable to the worker,
+          # but worker.js uses `env.V2V_KV` which is bound via wrangler.toml.
+          # command: 'deploy --minify --environment production' # use default deploy behavior
+
