--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,14 +1,15 @@
+# .github/workflows/scrape-and-deploy-mirrors.yml
 name: scrape, build, and deploy mirrors
 
 on:
   schedule:
-    - cron: "0 */4 * * *" # هر 4 ساعت یکبار اجرا می‌شود
-  workflow_dispatch: # امکان اجرای دستی
+    - cron: "0 */4 * * *" # Runs every 4 hours
+  workflow_dispatch: # Allows manual trigger
 
 permissions:
-  contents: write
-  pages: write
-  id-token: write
+  contents: write # Needed for git-auto-commit-action
+  pages: write    # Needed for deploy-pages-action
+  id-token: write # Needed for deploy-pages-action (if using OIDC)
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -17,67 +18,85 @@ concurrency:
 jobs:
   build_and_commit:
     runs-on: ubuntu-latest
-    name: 1. Scrape data & Upload to Cloudflare KV
+    name: 1. scrape data & upload to cloudflare kv
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: checkout repository
+        uses: actions/checkout@v4 # Updated to v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: set up python
+        uses: actions/setup-python@v5 # Updated to v5
         with:
           python-version: "3.12"
 
-      - name: Install and Upgrade Python Dependencies
+      - name: install and upgrade python dependencies
         run: |
           python -m pip install --upgrade pip
+          # Ensure requirements.txt includes 'requests', 'PyGithub', 'cloudflare'
           pip install --upgrade -r requirements.txt
 
-      - name: Run Scraper
+      - name: run scraper
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }} # Use GH_PAT as defined in scraper.py
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_KV_NAMESPACE_ID: ${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}
         run: python scraper.py
 
-      - name: Commit and Push Data Files
+      - name: commit and push updated files
+        # This action will commit any changes made by the scraper or any local file changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📊 data: update configs"
-          file_pattern: "*.json *.yml *.txt"
+          commit_message: "📊 data & website: update configs and frontend files"
+          # IMPORTANT: Include all files that might change or are part of the website
+          file_pattern: "*.json *.yml *.txt index.html index.js manifest.json logo.png"
+          # If you want to specify a branch to push to other than the current branch:
+          # branch: main
 
   deploy_mirrors:
-    needs: build_and_commit
+    needs: build_and_commit # Ensure scraper runs first
     runs-on: ubuntu-latest
-    name: 2. Deploy to Vercel, ArvanCloud & GitHub Pages
+    name: 2. deploy to vercel, arvancloud & github pages
     steps:
-      - name: Checkout Repository with Latest Data
-        uses: actions/checkout@v4
+      - name: checkout repository with latest data
+        # Checkout again to ensure we have the files committed by the previous job
+        uses: actions/checkout@v4 
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
+      - name: deploy to vercel
+        uses: amondnet/vercel-action@v25 # Latest version (or v20 for older GHES)
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Use exact secret names
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: .
-          vercel-args: '--prod'
+          vercel-args: '--prod' # Deploy to production alias
 
-      - name: Deploy to ArvanCloud S3
+      - name: deploy to arvancloud s3
+        # Ensure AWS CLI is available on the runner
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
-          AWS_REGION: "us-east-1"
+          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }} # AWS S3 compatible access key
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }} # AWS S3 compatible secret key
+          AWS_REGION: "us-east-1" # ArvanCloud S3 endpoint might require a dummy region
           ARVAN_S3_ENDPOINT: https://s3.ir-thr-at1.arvanstorage.com
-          ARVAN_S3_BUCKET: s3://v2v-data
+          ARVAN_S3_BUCKET: s3://v2v-data # Your S3 bucket name
         run: |
-          aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete --cache-control max-age=300
+          # Install AWS CLI v2
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install --update
+          
+          # Sync all current files to S3 bucket
+          aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} \
+            --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} \
+            --acl public-read \
+            --delete \
+            --cache-control max-age=300
 
-      - name: Create Artifact for GitHub Pages
+      - name: create artifact for github pages
+        # Uploads all files in the current directory as an artifact named 'github-pages'
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.'
+          path: '.' # Path to your static site files
 
-      - name: Deploy to GitHub Pages
+      - name: deploy to github pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4 # Latest version
