--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -19,6 +19,7 @@ jobs:
   build_and_commit:
     runs-on: ubuntu-latest
     name: 1. scrape data & upload to cloudflare kv
+    timeout-minutes: 20 # Overall timeout for this job, e.g., 20 minutes
     steps:
       - name: checkout repository
         uses: actions/checkout@v4 # Updated to v4
@@ -35,12 +36,13 @@ jobs:
           pip install --upgrade -r requirements.txt
 
       - name: run scraper
+        timeout-minutes: 15 # Specific timeout for the scraper step, e.g., 15 minutes
         env:
           GH_PAT: ${{ secrets.GH_PAT }} # Use GH_PAT as defined in scraper.py
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_KV_NAMESPACE_ID: ${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}
-        run: python scraper.py
+        run: python scraper.py # Rely on GitHub Actions' timeout-minutes
 
       - name: commit and push updated files
         # This action will commit any changes made by the scraper or any local file changes
@@ -56,13 +58,14 @@ jobs:
     needs: build_and_commit # Ensure scraper runs first
     runs-on: ubuntu-latest
     name: 2. deploy to vercel, arvancloud & github pages
+    timeout-minutes: 10 # Timeout for the deployment job
     steps:
       - name: checkout repository with latest data
         # Checkout again to ensure we have the files committed by the previous job
         uses: actions/checkout@v4 
 
       - name: deploy to vercel
-        uses: amondnet/vercel-action@v25 # Latest version (or v20 for older GHES)
+        uses: amondnet/vercel-action@v25 # Latest version
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Use exact secret names
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
