--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -1,4 +1,3 @@
-# .github/workflows/scrape-and-deploy-mirrors.yml
 name: scrape, build, and deploy mirrors
 
 on:
@@ -19,87 +18,98 @@ jobs:
   build_and_commit:
     runs-on: ubuntu-latest
     name: 1. scrape data & upload to cloudflare kv
-    timeout-minutes: 20 # Overall timeout for this job, e.g., 20 minutes
+    timeout-minutes: 15  # Reduced from 20 to 15 for faster termination
     steps:
       - name: checkout repository
-        uses: actions/checkout@v4 # Updated to v4
+        uses: actions/checkout@v4
 
       - name: set up python
-        uses: actions/setup-python@v5 # Updated to v5
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
       - name: install and upgrade python dependencies
         run: |
           python -m pip install --upgrade pip
-          # Ensure requirements.txt includes 'requests', 'PyGithub', 'cloudflare'
           pip install --upgrade -r requirements.txt
 
-      - name: run scraper
-        timeout-minutes: 15 # Specific timeout for the scraper step, e.g., 15 minutes
+      - name: run scraper with timeout protection
+        timeout-minutes: 12  # Specific timeout for scraper step
         env:
-          GH_PAT: ${{ secrets.GH_PAT }} # Use GH_PAT as defined in scraper.py
+          GH_PAT: ${{ secrets.GH_PAT }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_KV_NAMESPACE_ID: ${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}
-        run: python scraper.py # Rely on GitHub Actions' timeout-minutes
+        run: |
+          # Additional timeout command for extra safety
+          timeout 10m python scraper.py || {
+            echo "Scraper timed out after 10 minutes"
+            echo "This could be due to GitHub API rate limits or network issues"
+            exit 1
+          }
 
       - name: commit and push updated files
-        # This action will commit any changes made by the scraper or any local file changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "📊 data & website: update configs and frontend files"
-          # IMPORTANT: Include all files that might change or are part of the website
+          commit_message: "data & website: update configs and frontend files"
           file_pattern: "*.json *.yml *.txt index.html index.js manifest.json logo.png"
-          # If you want to specify a branch to push to other than the current branch:
-          # branch: main
 
   deploy_mirrors:
-    needs: build_and_commit # Ensure scraper runs first
+    needs: build_and_commit
     runs-on: ubuntu-latest
     name: 2. deploy to vercel, arvancloud & github pages
-    timeout-minutes: 10 # Timeout for the deployment job
+    timeout-minutes: 8  # Reduced from 10 to 8
     steps:
       - name: checkout repository with latest data
-        # Checkout again to ensure we have the files committed by the previous job
-        uses: actions/checkout@v4 
+        uses: actions/checkout@v4
 
       - name: deploy to vercel
-        uses: amondnet/vercel-action@v25 # Latest version
+        timeout-minutes: 3  # Add timeout for Vercel step
+        uses: amondnet/vercel-action@v25
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Use exact secret names
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: .
-          vercel-args: '--prod' # Deploy to production alias
+          vercel-args: '--prod'
 
       - name: deploy to arvancloud s3
-        # Ensure AWS CLI is available on the runner
+        timeout-minutes: 3  # Add timeout for ArvanCloud step
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }} # AWS S3 compatible access key
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }} # AWS S3 compatible secret key
-          AWS_REGION: "us-east-1" # ArvanCloud S3 endpoint might require a dummy region
+          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
+          AWS_REGION: "us-east-1"
           ARVAN_S3_ENDPOINT: https://s3.ir-thr-at1.arvanstorage.com
-          ARVAN_S3_BUCKET: s3://v2v-data # Your S3 bucket name
+          ARVAN_S3_BUCKET: s3://v2v-data
         run: |
-          # Install AWS CLI v2
+          # Install AWS CLI v2 with timeout protection
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
           sudo ./aws/install --update
           
-          # Sync all current files to S3 bucket
+          # Sync with timeout and retry logic
           aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} \
             --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} \
             --acl public-read \
             --delete \
-            --cache-control max-age=300
+            --cache-control max-age=300 \
+            --cli-connect-timeout 30 \
+            --cli-read-timeout 60 || {
+            echo "First sync attempt failed, retrying..."
+            aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} \
+              --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} \
+              --acl public-read \
+              --delete \
+              --cache-control max-age=300
+          }
 
       - name: create artifact for github pages
-        # Uploads all files in the current directory as an artifact named 'github-pages'
+        timeout-minutes: 1  # Add timeout for artifact creation
         uses: actions/upload-pages-artifact@v3
         with:
-          path: '.' # Path to your static site files
+          path: '.'
 
       - name: deploy to github pages
+        timeout-minutes: 1  # Add timeout for GitHub Pages deployment
         id: deployment
-        uses: actions/deploy-pages@v4 # Latest version
+        uses: actions/deploy-pages@v4
